testsuite/tests/mdo/should_fail/mdofail005.stderr

mdofail005.hs:11:14: error:
    parse error on input ‘<-’ (possibly incorrect indentation or mismatched brackets)
    Perhaps you intended to use RecursiveDo
